--- a/style/layout.css
+++ b/style/layout.css
@@ -4,7 +4,7 @@ html, body {
 	padding: 0;
 }
 
-.ormee > .wrap {
+.ormee.wrap {
 	margin: 0 auto;
 	width: 100%;
 	max-width: 1024px;
@@ -16,7 +16,7 @@ html, body {
 
 
 /* BUTONS */
-.ormee > .btn {
+.ormee.btn {
 	position: fixed;
 	left: 10px;
 	width: 42px;
@@ -28,30 +28,30 @@ html, body {
 	text-indent: 45px;
 }
 
-.ormee > .btn.switch_mode {
+.ormee.btn.switch_mode {
 	top: 10px;
 	background-color: rgb(243, 156, 18);
 	background-position: -84px 0;
 	z-index: 100;
 }
-.ormee > .btn.switch_mode:hover {
+.ormee.btn.switch_mode:hover {
 	background-color: rgb(241, 196, 15);
 }
-.ormee > .btn.control_page {
+.ormee.btn.control_page {
 	top: 62px;
 	background-color: rgb(41, 128, 185);
 	background-position: -42px 0;
 }
-.ormee > .btn.control_page:hover {
+.ormee.btn.control_page:hover {
 	background-color: rgb(52, 152, 219);
 }
 
-.ormee > .btn.add_element {
+.ormee.btn.add_element {
 	top: 114px;
 	background-color: rgb(22, 160, 133);
 	background-position: 0 0;
 }
-.ormee > .btn.add_element:hover {
+.ormee.btn.add_element:hover {
 	background-color: rgb(26, 188, 156);
 }
 
@@ -61,12 +61,12 @@ html, body {
 
 
 
-.ormee > .wrap .title_wrap {
+.ormee.wrap .title_wrap {
 	background: #F4F4F4;
 	border-bottom: 1px dashed #CECECE;
 }
 
-.ormee > .wrap .title_wrap textarea.h1 {
+.ormee.wrap .title_wrap textarea.h1 {
 	margin: 20px 0;
 	padding: 10px 0;
 	width: 100%;
